Vivaldi default browser

--- a/.config/i3/config
+++ b/.config/i3/config
@@ -1,16 +1,12 @@
-# 
-#       ███╗░░██╗██╗██╗░░██╗░█████╗░██████╗░░█████╗░██╗░░██╗███████╗
-#       ████╗░██║██║██║░░██║██╔══██╗██╔══██╗██╔══██╗██║░██╔╝╚════██║
-#       ██╔██╗██║██║███████║███████║██████╔╝██║░░██║█████═╝░░░███╔═╝
-#       ██║╚████║██║██╔══██║██╔══██║██╔══██╗██║░░██║██╔═██╗░██╔══╝░░
-#       ██║░╚███║██║██║░░██║██║░░██║██║░░██║╚█████╔╝██║░╚██╗███████╗
-#       ╚═╝░░╚══╝╚═╝╚═╝░░╚═╝╚═╝░░╚═╝╚═╝░░╚═╝░╚════╝░╚═╝░░╚═╝╚══════╝
 #
-#       DRAFTED BY NIHAR SAMANTARAY On 16-05-20. [https://nihars.com]
-#       SOURCE [config] LAST MODIFIED ON 31-05-20
+#		NAME		:	NIHAR SAMANTARAY
+#		WEBSITE		:	HTTPS://NIHARS.COM
+#		SOURCE		:	config
+#		CREATED ON	:	14-05-20
+#		MODIFIED ON	:	14-06-20
 
 # Set default keys
-set $browser brave
+set $browser vivaldi
 set $myterminal termite
 set $editor code
 set $mod Mod4
@@ -193,5 +189,6 @@ exec_always --no-startup-id RR
 exec_always exec picom &
 exec_always --no-startup-id $HOME/.config/polybar/launch.sh
 exec_always feh --bg-scale /data/picture/system/wallpaper/greenpredator.jpg
+
 
 
