--- a/.config/termite/config
+++ b/.config/termite/config
@@ -1,13 +1,13 @@
 [options]
-#allow_bold = true
+allow_bold = true
 #audible_bell = false
-#bold_is_bright = true
+bold_is_bright = true
 #cell_height_scale = 1.0
 #cell_width_scale = 1.0
-#clickable_url = true
+clickable_url = true
 #dynamic_title = true
-font = Hack 10 
-#fullscreen = true
+font = FiraCode 12 
+fullscreen = true
 #icon_name = terminal
 #mouse_autohide = false
 #scroll_on_output = false
