--- a/.config/termite/config
+++ b/.config/termite/config
@@ -69,7 +69,7 @@ color15 = #A2DDBC
 #background = #000000
 #active_foreground = #e68080
 #active_background = #3f3f3f
-#padding = 2
+padding = 2
 #border = #3f3f3f
 #border_width = 0.5
 #roundness = 2.0
