--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -24,7 +24,7 @@ bold_font      FiraCode Bold
 #:     bold_italic_font Operator Mono Medium Italic
 
 # font_size 11.0
-font_size 12.0
+font_size 11.0
 
 #: Font size (in pts)
 
@@ -137,7 +137,7 @@ font_size 12.0
 
 #: Enable alternate zero and oldstyle numerals::
 
-#:     font_features FiraCode-Retina +zero +onum
+font_features FiraCode-Retina +zero +onum
 
 #: Enable only alternate zero::
 
@@ -165,11 +165,11 @@ font_size 12.0
 
 #: Cursor customization {{{
 
-# cursor #cccccc
+cursor #ECF4F4
 
 #: Default cursor color
 
-# cursor_text_color #111111
+cursor_text_color #191919
 
 #: Choose the color of text under the cursor. If you want it rendered
 #: with the background color of the cell underneath instead, use the
