--- a/.config/git/config
+++ b/.config/git/config
@@ -7,8 +7,8 @@
 #       ██║╚██╗██║██║██╔══██║██╔══██║██╔══██╗╚════██║
 #       ██║ ╚████║██║██║  ██║██║  ██║██║  ██║███████║
 #       ╚═╝  ╚═══╝╚═╝╚═╝  ╚═╝╚═╝  ╚═╝╚═╝  ╚═╝╚══════╝
-#       DRAFTED BY [https://nihar.page] ON 27-06-2021.
-#       SOURCE [config] LAST MODIFIED ON 27-06-2021.
+#       DRAFTED BY [https://nihars.com] ON 27-06-2021.
+#       SOURCE [config] LAST MODIFIED ON 12-06-2022.
 #
 
 [commit]
@@ -18,5 +18,5 @@
 [user]
         email = hi@nihars.com
         name = niharokz
-        signingkey = 86F83537E2BA66F0
+        signingkey = C4E7B20A17E66D9B
 
