--- a/.config/.gitignore
+++ b/.config/.gitignore
@@ -13,7 +13,7 @@ gnupg
 GIMP
 Electron
 dconf
-Code - OSS
+Code
 code-oss
 cmus
 BraveSoftware
@@ -24,3 +24,7 @@ lagrange
 amfora
 st
 vue
+bcompare5
+htop
+systemd
+feh
